test-app.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
spec:
  replicas: 10
  revisionHistoryLimit: 5
  minReadySeconds: 30
  selector:
    matchLabels:
      app: rollout-bluegreen
  template:
    metadata:
      labels:
        app: rollout-bluegreen
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:red
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
strategy:
    blueGreen:
      # Name of the service that the rollout modifies as the active service.
      activeService: rollout-bluegreen-active
      # Name of the service that the rollout modifies as the preview service.
      previewService: rollout-bluegreen-preview 
      # The number of replicas to run under the preview service before the switchover. Once the rollout is resumed the new replicaset will be full scaled up before the switch occurs +optional
      previewReplicaCount: 2
      # Indicates if the rollout should automatically promote the new ReplicaSet to the active service or enter a paused state. If not specified, the default value is true. +optional
      autoPromotionEnabled: false
      # Adds a delay before scaling down the previous replicaset. If omitted, the Rollout waits 30 seconds before scaling down the previous ReplicaSet. A minimum of 30 seconds is recommended to ensure IP table propagation across the nodes in a cluster. See https://github.com/argoproj/argo-rollouts/issues/19#issuecomment-476329960 for more information
      scaleDownDelaySeconds: 30

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
spec:
  selector:
    app: rollout-bluegreen
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
spec:
  selector:
    app: rollout-bluegreen
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollout-bluegreen-active-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: rollout-bluegreen-active
spec:
  backend:
    serviceName: rollout-bluegreen-active
    servicePort: 80


---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rollout-bluegreen-preview-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: rollout-bluegreen-preview
spec:
  backend:
    serviceName: rollout-bluegreen-preview
    servicePort: 80
