test-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-rest-deployment
spec:
  selector:
    matchLabels:
      app: test-rest
  template:
    metadata:
      labels:
        app: test-rest
    spec:
      containers:
      - name: test-rest
        image: gcr.io/bachelor-2020/test-rest:v1.15
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      - name: proxy
      image: gcr.io/cloudsql-docker/gce-proxy:1.16
      command: ["/cloud_sql_proxy",
                "-instances=bachelor-2020:europe-west1:terraform-20200303173438591800000001-instance=tcp:5432",
                # If running on a VPC, the Cloud SQL proxy can connect via Private IP. See:
                # https://cloud.google.com/sql/docs/mysql/private-ip for more info.
                # "-ip_address_types=PRIVATE",
                "-credential_file=/secrets/cloudsql/credentials.json"]
      securityContext:
        runAsUser: 2  # non-root user
        allowPrivilegeEscalation: false
      # [END cloudsql_security_context]
      volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
    volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials

---
kind: Service
apiVersion: v1
metadata:
  name: test-rest
spec:
  selector:
    app: test-rest
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080


---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-rest-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: test-rest
spec:
  backend:
    serviceName: test-rest
    servicePort: 80
